--- a/orders/templates/orders/detail.html
+++ b/orders/templates/orders/detail.html
@@ -56,7 +56,7 @@
                 <tr>
                     <th>Product</th>
                     <th>Price</th>
-                    <th>Quantity</th>
+                    <th>Количество</th>
                     <th>Total</th>
                 </tr>
                 </thead>
