--- a/orders/templates/orders/order/created.html
+++ b/orders/templates/orders/order/created.html
@@ -3,7 +3,9 @@
 {% block title %}Thank you{% endblock %}
 
 {% block content %}
+	<center>
     <h1>Спасибо за покупку </h1>
     <p>Ваш заказ принят в обработку,номер заказа
-        <strong>{{ order.id }}</strong>.</p>
+    <strong>{{ order.id }}</strong>.</p>
+	</center>
 {% endblock %}
