--- a/shop/static/css/style.css
+++ b/shop/static/css/style.css
@@ -1,6 +1,6 @@
 body{
-  background-color:333333;
-  color:FFFFFF;
+  background-color:FFFFFF;
+  color:000000;
 
 }
 
@@ -14,12 +14,12 @@ li{
 li.selected{
     background-color: #5bc0de;
     border-radius: 4px;
-    color: white;
+    color: black;
     margin-bottom: 5px;
 }
 
 li.selected > a{
-    color:white;
+    color:black;
 }
 
 div.item {
@@ -35,16 +35,18 @@ div.item:hover{
 div.order-info{
 	float: right;
   width: 300px;
-  height: 150px;
-  margin-right: 20px;
+  height: 200px;
+  margin-right: 20;
   padding: 0 20px;
-  border: 3px dashed #add;
-  background-color:#212529 
+  border: 15px dashed #add;
+  background-color:#22ab6d4 
     
 }
     
 }
-
+.pol{
+	left: 100px;
+}
 
 .cart-image {
     height: 100px;
@@ -58,7 +60,7 @@ div.order-info{
     border-collapse: collapse;
     width: 100%;
     margin-bottom: 10px;
-	 background-color:333333;
+	 background-color: FFFFFF;
 }
 
 td, th {
@@ -72,12 +74,12 @@ tr td:first-child{
 }
 
 thead tr {
-    background-color: #212529;
-    color: white;
+    background-color: #17a2b8;
+    color: black;
 }
 
 tbody tr:last-child, .total {
-    background-color: #000000;
+    background-color: #17a2b8;
 }
 
 .glyphicon-shopping-cart {
@@ -104,13 +106,43 @@ a.navbar-brand{
 	font-size: 32px; /* Размер шрифта */
     font-weight: bold; /* Жирное начертание */
     color: red; /* Цвет ссылки */
-	
+
+
+}
+.example3 {
+    display:inline-block;   
+    position:relative;
+}
+.example3 .example_text {
+    display:block;
+    position:absolute;
+    left:0;
+    bottom:0;
+    width:100%;
+    box-sizing:border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box; 
+     
+    color:000000;
+         
+    padding:12px;
+    background-color:rgba(0,0,0,.3);
+ 
+     
+}
+.example3 h6 {
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:20px;
+}
+.example3 span {
+    font-size:12px; 
 }
 #sidebar{
 	float: left;
     margin-bottom: 30px;
     padding: 15px;
-    width: 30%;
+    width: 20%;
     overflow: hidden;
 	
 	
@@ -118,31 +150,33 @@ a.navbar-brand{
 #main{
     float: right;
     padding-left: 15px;
-    width: 70%;
-    display: block;
+    width: 80%;
+    /* display: block; */
     overflow: hidden;
     position:relative;
 	
 
 }
+
 .total{
-	background:;
+	background:FFFFFF;
 }
 .item{
-	/*display: inline-block; блок за блоком*/
+	 display: inline-block; /*блок за блоком*/ 
+	
 	
 }
 
-#footer {
+#footer{
 
     clear: both;
-
     padding: 50px 20px;
 }
 	
 }
 .product-list{
 	float: right;
+	
 }
 .product-detail{
 }
@@ -150,3 +184,156 @@ a.navbar-brand{
 text-align: center!important;
 font-size: 16pt;
 }
+myFooter{
+    padding-top:32px;
+}
+
+#myFooter .container{
+    text-align: center;
+}
+
+#myFooter .footer-copyright{
+    margin-bottom: 35px;
+    text-align: center;
+    color: #777;
+}
+
+#myFooter ul{
+    list-style-type: none;
+    padding: 0;
+    margin-bottom: 18px;
+}
+
+#myFooter a{
+    color: #282b2d;
+    font-size: 18px;
+}
+
+#myFooter li{
+    display: inline-block;
+    margin: 0px 15px;
+    line-height: 2;
+}
+
+#myFooter .footer-social{
+    text-align: center;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    background-color: #eee;
+}
+
+#myFooter .fa{
+    font-size: 36px;
+    margin-right: 15px;
+    margin-left: 20px;
+    background-color: white;
+    color: #d0d0d0;
+    border-radius: 51%;
+    padding: 10px;
+    height: 60px;
+    width: 60px;
+    text-align: center;
+    line-height: 43px;
+    text-decoration: none;
+    transition:color 0.2s;
+}
+
+#myFooter .fa-facebook:hover{
+   color: #2b55ff;
+}
+
+#myFooter .fa-facebook:focus{
+    color: #2b55ff; 
+}
+
+#myFooter .fa-google-plus:hover{
+    color:red;
+}
+
+#myFooter .fa-google-plus:focus{
+    color:red;
+}
+
+#myFooter .fa-twitter:hover{
+    color: #00aced;
+
+}
+
+#myFooter .fa-twitter:focus{
+    color:#00aced;
+}
+
+
+
+/* CSS used for positioning the footers at the bottom of the page. */
+/* You can remove this. */
+
+html{
+    height: 100%;
+}
+
+body{
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
+    -webkit-flex-direction: column;
+    height: 100%;
+}
+
+.content{
+   flex: 1 0 auto;
+   -webkit-flex: 1 0 auto;
+   min-height: 200px;
+}
+
+#myFooter{
+   flex: 0 0 auto;
+   -webkit-flex: 0 0 auto;
+}
+#slider-wrap{ /* ќболочка слайдера и кнопок */
+	width:100%; 
+	}
+#slider{ /* ќболочка слайдера */
+	width:100%;
+	height:50%;
+	overflow: hidden;
+	border:#eee solid 10px;
+	position:relative;}
+.slide{ /* —лайд */
+	width:100%;
+	height:100%;
+	}
+.sli-links{ /*  нопки смены слайдов */
+	margin-top:10px;
+	text-align:center;}
+.sli-links .control-slide{
+	margin:2px;
+	display:inline-block;
+	width:16px;
+	height:16px;
+	overflow:hidden;
+	text-indent:-9999px;
+	background:url(radioBg.png) center bottom no-repeat;}
+.sli-links .control-slide:hover{
+	cursor:pointer;
+	background-position:center center;}
+.sli-links .control-slide.active{
+	background-position:center top;}
+#prewbutton, #nextbutton{ /* —сылка "—ледующий" и "ѕедыдущий" */
+	display:block;
+	width:15px;
+	height:100%;
+	position:absolute;
+	top:0;
+	overflow:hidden;
+	text-indent:-999px;
+	background:url(arrowBg.png) left center no-repeat;
+	opacity:0.8;
+	z-index:3;
+	outline:none !important;}
+#prewbutton{left:10px;}
+#nextbutton{
+	right:10px;
+	background:url(arrowBg.png) right center no-repeat;}
+#prewbutton:hover, #nextbutton:hover{
+	opacity:1;}
